<resources>
    <string name="app_name">ExampleUzum</string>
    <string name="searchHint">Искать товары и категории</string>
    <string name="navBottomSale">Распродажа</string>
    <string name="navBottomPopular">Популярные</string>
    <string name="navBottomNewest">Новинки</string>
    <string name="menuIconSearch">Поиск</string>
    <string name="menuIconProfile">Профиль</string>
    <string name="menuIconHome">Домой</string>
    <string name="menuIconWish">Желания</string>
    <string name="menuIconBasket">Корзина</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello From Fragment 2 </string>
    <string name="sale_in_button_in_imageview">Распродажа</string>
    <string name="myWishesTextInWishFragment">Мои желания</string>
</resources>